# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.353 2005/10/11 22:26:17 wolf31o2 Exp $

  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Reverted default CHOST for x86 back to i386-pc-linux-gnu.

  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/post-kmerge.sh:
  Check for existence of files in /lib/modules before running depscan.sh. This
  replaces the mips-specific check and makes it portable.

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  update autoresume logic when dealing with rsync unpack operations

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/post-kmerge.sh:
  Bypass module load on mips

  10 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
  remove --no-deps so dependancies get installed for genkernel

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix missing : statement in unpack

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix livecd-stage2 unpack when seedcache is turned off

  10 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Fix module unpacking and make it actually optional.

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix broken seedcache autoresume interaction

  07 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Cleanup stage directories properly for tar installs

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/tinderbox_target.py:
  Tinderbox no longer cleans /tmp/*

  06 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-controller.sh:
  Fixing problem with bind mounted portage and final rsync on tinderbox target
  and adding additional logging.
